--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,6 +13,8 @@
   <!-- Link for Forelesning/seminarer -->
   <a href="https://github.com/uit-bed-1304-h25/uit-bed-1304-h25.github.io/tree/main/notebooks">Forelesninger</a>
   <a href="https://github.com/uit-bed-1304-h25/uit-bed-1304-h25.github.io/tree/main/oppgaver">Seminarer</a>
+  <a href="repetisjon.html">Repetisjon/oppgaver</a>
+
 
   <!-- Add some vertical space -->
   <br> <!-- This creates a small space -->
