--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,6 +14,7 @@
   <a href="https://github.com/uit-bed-1304-h25/uit-bed-1304-h25.github.io/tree/main/notebooks">Forelesninger</a>
   <a href="https://github.com/uit-bed-1304-h25/uit-bed-1304-h25.github.io/tree/main/oppgaver">Seminarer</a>
   <a href="repetisjon.html">Repetisjon/oppgaver</a>
+  <a href="https://github.com/uit-bed-1304-h25/uit-bed-1304-h25.github.io/tree/main/data">Data til forelesningsnotater</a>
 
 
   <!-- Add some vertical space -->
